# nxtool

./: .gitignore  README.md  pyproject.toml
nxtool/: __main__.py  configuration.py  constants.py  main.py  typer_commands.py  utils.py  workspace.py
nxtool/cli/: typer_commands.py
nxtool/cmd/: build.py  info.py  project.py  workspace.py
nxtool/commands/: __init__.py  build.py  info.py  init.py  list.py  nxcmd.py  project.py  workspace.py
nxtool/config/: configuration.py
nxtool/data/: config.toml  projects.toml
nxtool/internal/tools/: configure.py
nxtool/internal/utils/: builders.py  git.py  topdir.py
nxtool/typer/: typer_commands.py
nxtool/utils/: builders.py  git.py  run_cmd.py  topdir.py
