[tool.poetry]
name = "nxtool"
version = "0.0.0"
description = ""
authors = ["Luchian Mihai <luchiann.mihai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
nxtool = "nxtool.main:nxcli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["nxtool"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
